packages/jsii/test/negatives/neg.class-name.ts
///!MATCH_ERROR: Type names must use pascal-case: myclass

export class myclass {

}
